# pygskit

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-package-conda.yml
analysis/: README.md
analysis/data/: README.md
analysis/resources/: README.md
analysis/scripts/: README.md
docs/: Workflows.md
pygskit/: gskit_cli.py
pygskit/commands/: gvcf_combiner.py  mt2vcf.py  mts_combiner.py  vds2mt.py  vds_combiner.py
pygskit/gskit/: combiners.py  constants.py  converters.py  file_utils.py  utils.py
test/: test-hail.py
tests/: test_combine_gvcfs.py  test_combiners.py  test_converters.py  test_file_utils.py  test_gvcf_combiner.py  test_hail_installation.py  test_mts_combiner.py  test_sort_matrix_table.py
tests/testdata/gvcfs/: NA06894.chr1.g.vcf.gz.tbi  NA12878.chr1.g.vcf.gz.tbi  NA12881.chr1.g.vcf.gz.tbi
tests/testdata/vcf/: cohort.vcf.bgz
