[tool.poetry]
name = "pygskit"
description = "A general-purpose toolkit for genome sequencing data analysis."
readme = "README.md"
license = "Apache-2.0"
version = "0.0.1"
authors = [
    "Enrique Audain <enrique.audain.martinez@uni-oldenburg.de>"
]
keywords = [
    "genome-sequencing",
    "data-analysis",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License 2.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta"
]
packages = [
    { include = "pygskit" }
]

[tool.poetry.dependencies]
python = ">=3.10"
hail = "~=0.2.120"
gnomad = ">=0.8.2"

[tool.poetry.urls]
GitHub = "https://github.com/MedGenOL/pygskit/"
LICENSE = "hhttps://github.com/MedGenOL/pygskit/blob/main/LICENSE"

[tool.poetry.scripts]
pygskit = "pygskit.gskit_cli:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
